Fixes #1439: The tables in 'Remove CRF from Event' window are misaligned. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1792 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -844,19 +844,23 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
     vertical-align: top;
 }
 
-.table_header_column_top { padding-top: 3px;
-    padding-left: 6px;
-    padding-right: 6px;
-    padding-bottom: 3px;
+.table_header_column_top {
+    padding: 0.2em;
     border-style: solid;
-    border-top-width: 0px;
-    border-left-width: 0px;
-    border-right-width: 1px;
+    border-top-width: 1px;
+    border-left-width: 1px;
+    border-right-width: 0px;
     border-bottom-width: 0px;
-    border-right-color: #CCCCCC;
+    border-left-color: #CCCCCC;
+    border-top-color: #E6E6E6;
+    vertical-align: top;
+    text-align: left;
     font-weight: bold;
     color: #666666;
-    vertical-align: top;
+}
+
+.table_header_without_right_border {
+    border-right: none !important;
 }
 
 .table_cell_border {
